--- a/collection_landsat/Dockerfile
+++ b/collection_landsat/Dockerfile
@@ -8,10 +8,21 @@ RUN mkdir $BASE_PATH/logs
 WORKDIR $BASE_PATH
 
 # ============= Dependencies ============= #
+# install container wide dependencies
 RUN apt-get update --fix-missing
-RUN apt-get install --assume-yes libmariadbclient-dev
-RUN apt-get install --assume-yes gcc
+RUN apt-get install --assume-yes gcc libmariadbclient-dev git
 
+# install lib_learning dependency
+RUN git clone https://github.com/frankwang95/lib_learning.git $LIB_PATH/lib_learning
+RUN pip install -r $LIB_PATH/lib_learning/requirements_pipelines.txt
+RUN pip install $LIB_PATH/lib_learning
+
+# install project-earth lib-core dependency
+RUN git clone https://github.com/project-earth/lib_core.git $LIB_PATH/lib_core
+RUN pip install -r $LIB_PATH/lib_core/requirements.txt
+RUN pip install $LIB_PATH/lib_core
+
+# install pypi dependencies
 ADD . $BASE_PATH
 WORKDIR $BASE_PATH
 RUN pip install -r requirements.txt
